--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 
           <div class="card" id="javascript">
             <div class="banner">
-              <a href="https://erick-mcgee.github.io/Javascript-demo/">JavaScript</a>
-              <p>A series of JavaScript demonstrations</p>
+              <a href="https://willlasbury.github.io/parks-and-plants/">Plant Index +</a>
+              <p>My first group project</p>
             </div>
           </div>
         </div>
