--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
 
           <div class="card" id="study-guide">
               <div class="banner">
-                <a href="https://erick-mcgee.github.io/Study-guide/">Study Guide</a>
-                <p>Study guide for various information regarding coding</p>
+                <a href="https://ourspace.herokuapp.com/
+">OURspace</a>
+                <p>(PROJECT 2) A simple social media site</p>
               </div>
             </div>
 
