--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
           <div class="card" id="flexbox">
             <div class="banner">
-              <a href="https://erick-mcgee.github.io/flexbox-demo/">Flexbox</a>
-              <p>Various flexbox demonstrations</p>
+              <a href="https://wellington-j-gallowsby-hangman.netlify.app/">Hangman</a>
+              <p>(PROJECT 3) a simle social react app for playing hangman</p>
             </div>
           </div>
 
